<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.example</groupId>
    <artifactId>OAP_beans_test</artifactId>
    <version>1.0-SNAPSHOT</version>

<!--    <parent>-->
<!--        <groupId>oap</groupId>-->
<!--        <artifactId>oap-ws-parent</artifactId>-->
<!--        <version>18.3.7.5</version>-->
<!--    </parent>-->

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <maven.compiler.parameters>true</maven.compiler.parameters>

        <oap-ws.version>18.13.0.14</oap-ws.version>
        <oap.version>18.11.5.3</oap.version>
        <lombok.version>1.18.24</lombok.version>
    </properties>

    <repositories>
        <repository>
            <id>oap</id>
            <url>https://mvn.oaplatform.org</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>oap</id>
            <url>https://mvn.oaplatform.org/</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>oap</groupId>
            <artifactId>oap-stdlib</artifactId>
            <version>${oap.version}</version>
        </dependency>
        <dependency>
            <groupId>oap</groupId>
            <artifactId>oap-ws</artifactId>
            <version>${oap-ws.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <compilerVersion>${java.version}</compilerVersion>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <parameters>true</parameters>
                    <compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>6.1.1</version> <!-- Use newer version of ASM for Java 10 -->
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>
